# Encryptor

./: LICENSE  README.md  setup.cfg
.github/workflows/: publish.yml
encryptor/: __init__.py
simple_encryptor/: main.py
tests/: test.py
