[metadata]
name = simple-encryptor          # must be unique on PyPI
version = 0.1.0
author = Murtaza Zaidi
author_email = zaidimurtaza102@gmail.com
description = A secure AES-GCM encryption/decryption package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zaidimurtaza/Encryptor
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    cryptography

[options.extras_require]
dev =
    pytest
